@@ -1,4 +1,4 @@
-﻿namespace Caliburn.DynamicProxy
+﻿namespace Caliburn.DynamicProxy.Interceptors
 {
     using System;
     using System.ComponentModel;
@@ -10,6 +10,11 @@
     /// </summary>
     public class NotifyPropertyChangedNoInterfaceInterceptor : NotifyPropertyChangedBaseInterceptor
     {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="NotifyPropertyChangedNoInterfaceInterceptor"/> class.
+        /// </summary>
+        /// <param name="implementation">The implementation.</param>
+        /// <param name="behavior">The behavior.</param>
         public NotifyPropertyChangedNoInterfaceInterceptor(Type implementation, NotifyPropertyChangedAttribute behavior) 
             : base(implementation, behavior) {}
 
